fix spacing of videos on show page

--- a/app/assets/stylesheets/category-show.scss
+++ b/app/assets/stylesheets/category-show.scss
@@ -4,6 +4,7 @@
   margin-bottom: 70px;
   display: inline-table;
   position: absolute;
+  left: 9%;
 }
 
 
@@ -15,18 +16,20 @@
 
 .video-row-show {
   margin-top: 100px;
+  position: absolute;
   display: flex;
   flex-wrap: wrap;
   max-width: 96%;
+  left: 9%;
 }
 
 .video-show {
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   max-height: 9.83em;
 }
 
 .dropdown-container-show {
   position: fixed;
-  margin-top: 10px;
+  margin-top: 5em;
   z-index: 1;
 }
